# ChangeLog for dev-ruby/zentest
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.108 2012/07/26 11:14:31 blueness Exp $

  26 Jul 2012; Anthony G. Basile <blueness@gentoo.org> zentest-4.7.0.ebuild:
  Stable ppc64, bug #421525

  22 Jul 2012; <nixnut@gentoo.org> zentest-4.7.0.ebuild:
  ppc stable #421525

  30 Jun 2012; Andreas Schuerch <nativemad@gentoo.org> zentest-4.7.0.ebuild:
  x86 stable, see bug 421525

  18 Jun 2012; Agostino Sarubbo <ago@gentoo.org> zentest-4.7.0.ebuild:
  Stable for amd64, wrt bug #421525

*zentest-4.8.1 (16 Jun 2012)

  16 Jun 2012; Hans de Graaff <graaff@gentoo.org> +zentest-4.8.1.ebuild:
  Version bump.

*zentest-4.7.0 (27 Apr 2012)

  27 Apr 2012; Hans de Graaff <graaff@gentoo.org> +zentest-4.7.0.ebuild:
  Version bump.

  27 Apr 2012; Hans de Graaff <graaff@gentoo.org> -zentest-4.3.3.ebuild,
  -zentest-4.5.0.ebuild, -zentest-4.6.0.ebuild, -zentest-4.6.1.ebuild:
  Remove old versions.

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> zentest-4.6.2.ebuild:
  Add Prefix keywords, bug #396547

  05 Dec 2011; Naohiro Aota <naota@gentoo.org> zentest-4.6.2.ebuild:
  Add ~x86-fbsd.

  14 Sep 2011; Jeroen Roovers <jer@gentoo.org> zentest-4.4.2.ebuild:
  Stable for HPPA (bug #369573).

*zentest-4.6.2 (26 Aug 2011)

  26 Aug 2011; Hans de Graaff <graaff@gentoo.org> +zentest-4.6.2.ebuild:
  Version bump.

*zentest-4.6.1 (12 Aug 2011)

  12 Aug 2011; Hans de Graaff <graaff@gentoo.org> +zentest-4.6.1.ebuild:
  Version bump.

*zentest-4.6.0 (23 Jul 2011)

  23 Jul 2011; Hans de Graaff <graaff@gentoo.org> +zentest-4.6.0.ebuild:
  Version bump.

  10 Jul 2011; Mark Loeser <halcy0n@gentoo.org> zentest-4.4.2.ebuild:
  Stable for ppc64; bug #354609

  14 May 2011; Hans de Graaff <graaff@gentoo.org> -zentest-4.1.3.ebuild,
  -zentest-4.4.2-r1.ebuild:
  Remove old versions.

  16 Apr 2011; Raúl Porcel <armin76@gentoo.org> zentest-4.4.2.ebuild:
  ia64 stable wrt #354609