@@ -5,16 +5,22 @@ DIST ZenTest-4.4.2.gem 66048 SHA256 7325414108f87a5fab07242679e977ab7c69503189f6
 DIST ZenTest-4.6.2.gem 68096 SHA256 004e4afa490ab73cfd46e0fb9e6021a81354d081c3c524ca3cf8dc4d438dcb4e SHA512 28b48e08f467277b5288ecfa1a190ad20846c22dbcf037cc94393c79ac9f5aa54e266b62b9e2abe1458267c008d3f2f10eebc9283c2430df97280a2caee11b1c WHIRLPOOL 39c7ef754a300f3959d47b06335f37651eeafc4c5c5a7d496ed7be7656e9c0ddf397cb4467ba5e0f87022320b5f35f7f5ba20fe69e1dbafdf47e3f22463fc8c3
 DIST ZenTest-4.7.0.gem 68096 SHA256 3c6cf0c9ca0461683ed08013edfdec936bfc549f06c00d9cc739f980b2aa70bf SHA512 a7d66f53301143bb71fd8c2f72494d0ac14bd3faaad24d1e7edb85fa8ea12b1587abfa580042a5de27a75bdff65af8a0648e79f264bb84ff9179896ddd2ec334 WHIRLPOOL 66ec799c2165c67b969c459138043093c66c76c9b25fcb9418727e3c5b24720c52003eb5a9cbd26e304c8f3804101f259c0368926ffe1d3770358a8a1e0ec20a
 DIST ZenTest-4.8.1.gem 68608 SHA256 7b3c9d7b32609d29abf409b22f2032f229deefb948ffddabe26099f03f33e84a SHA512 e5b1b5886eb3591bec8d96044c7c9e45604a0cf3744eb4abccef199d2a42ac2454a214dc783e85120bd755d266902c347f98f0e8efd7f1427342d79d35256588 WHIRLPOOL 227a94a88cb0f3be0e34a1f7f40f7daae928d00fac02d96d7385a786678012ae60399d758ae99039cd8b48138b4668f91aa13267c461685e2f014860900c8a89
+DIST ZenTest-4.8.2.gem 68608 SHA256 4b5af0805b855ce03dc74e97db683974e71f710333a099f6dc368f6e52726c83 SHA512 d3cf05f946c2bb5fd776253203382aabf97e3f81a6633fc55c2005a5d124eaa37bf5ac27621b5461fa1c81f9bc2522486f472a66726c92337a66b286098024a7 WHIRLPOOL b7e2cfd623f3061b4858c94db2feaf3a94b6e23c5858e5467848defc250d23926a25c140d75c0e095e0dc279eb6df1d0f88ccb5a539d83194af5ab0b65b0632d
 EBUILD zentest-4.4.2.ebuild 1130 SHA256 2a7116f438db1f7a51b25ae6fbb32d83588eee8d25b80a27e92b87d5893a8445 SHA512 97076a53d5aacbd33cd8c3aa3191a271ff1102de3d3a6e8c294cc33778965144346b6b3ee259b7fff799ec9025b8f3598bc7528478612ed98b14735e025f424b WHIRLPOOL ce729e5d3aa0afa95bfe94c8f5c817762d7f25228dd6bc2d9ffc2f38ff3974045c25101e130e2de50ef23324a0b61ca22594071442f5d8ab743f7b68b1184d5a
 EBUILD zentest-4.6.2.ebuild 1024 SHA256 d16ff223e749a90e24bcd4300bc2346802e480b9621e2184e8b9d3a7f151442f SHA512 81ad4523d58df00bad1a76c548921742a302859fd49e587b70e468653ade719e5bb4a3e5e074eabc81eacec1d02c64600734a11633a8c8a9ad29a7c418026cb3 WHIRLPOOL 86971cbbb26e5bffa1e951bae7318d9c77b7b45581456854d327dec338666780fea69e285dc11c5013b462ca39780b37c2cbc090bb1d50051408b3bf13f217ec
 EBUILD zentest-4.7.0.ebuild 1021 SHA256 607ebf37f51cb77ae357441fba45541311df6c08acd9534b09d921d8db264d6f SHA512 d79fd04cfbaee6622313b9ba557695dd1bbbb4029a4139d0e7d8b4839e072be0fe0c64d2847706be97f776383aedbaf77cd36a4f2d9aea4d822bbac130c9bff4 WHIRLPOOL a4da4962fd9194627d5695659507e59792ef93007be2329ec93b9b24cf8b19958d92f58974bedf31cdc9f88560b93eb677ebfea023b8a3f3ae021cbedc0dac0f
 EBUILD zentest-4.8.1.ebuild 1023 SHA256 daa38b74b4d350f31ec2e71d5e95e217fddf47ce85e64252247140849bb45e1b SHA512 ee3b66a425b52a638c18d4967d54ef944d9d8911fec3c374b75015f2ed3d83c088c5f6dc3852790a3112d6eac610cd78c621dcb5309c8b0adc1bbc1d513a1014 WHIRLPOOL 803ec8363c380da482c5259603b889f40aa3f4254aab464324bb3acb552db5621ebee8d6b4df38d623d9326471b9ad6238d9c6fa94ec6eb308d5b28551a3d665
-MISC ChangeLog 14035 SHA256 f5bbd51c552fd9921b9e7a14d3807a20a62d0b8d1493666bd95576594fa7e06c SHA512 805d5439f3a338363337c85c36a1b5c419394a3fa50e1d3e0a471e89f28064335e7bb44456e6866f3208db71ce9e424d2611e960648fe0e179013cd6ec801fcc WHIRLPOOL 5d37227c647e73f8049cc85222aa99207090c617ed64537aa4b0239490237a51d60d0dd7ffe0ed7fb5b048718973a75a34f8ff258e553f712764c26b9a74b47c
+EBUILD zentest-4.8.2.ebuild 1026 SHA256 3ce0c37c5c7a35b5cf048c09ba5a32826e31ff812224e2441271df5254376143 SHA512 2da29a539a539b586f4888015a3494b28884aec537cabe848f81a84489d5047fea31003edaeecf70b49d007d37bf2464a9e2b5b6fbfa8682f04377c4a1cc324a WHIRLPOOL d28bc5092c3b7e6cf20791cd8eae7e0e5ab109616cb2be42bec00d468d27cce33b495102296dd6009476adfc15c5f283e19bdac1187170022a90eead09c21e10
+MISC ChangeLog 14179 SHA256 33091e010b5c91afc4769929408c60ef28097bb2c5c15a578d531c39a8580650 SHA512 3a581af0126a97f7f6325a7159809c7d384b3447f6b13bb24b404fb63bdaf970c3858486ab3046ff0d347581de0ecc3b30e38910a65463b618109e64e44a72f9 WHIRLPOOL fa5a41213c2ab4e196a83980d87ad822a2df5236506c566986a6dfdaecd49853ed23958dff8b1a382f2588d54489b42205c4b5770bdc6641a7dd0da00f115107
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlARJqYACgkQl5yvQNBFVTXWWACeKJxFhlsIiRZclmSytafWsGoz
-AUwAn0D40NbSHWZeGW/qBpnL3q/Bbtjt
-=krDx
+iQEcBAEBCAAGBQJQKRaAAAoJEBzRPIrUMBNCO5sH/3XIBMLFreAM+PXoWPI6ELSU
+nYv+DwkEhzwuRxivTVkVf+TRCdYIQkhT+/hCuaEt44PzQr8TIo0wKrAgrkTsblke
+erix5MW3oijYVhSLobwSGDs6SrsHWBIEYtpvmS/+X2In7LyCxVvLmbhYL3nyyRlg
+ILha/OHd/7dmhKT2fg8i7J4Je2PR/zKBiF9wrD2/irnQuHxBmaAHrhqDwDKGQOjl
+2uoaPx+uNzo/9UdYfuIkGjdC+i7Y3xYlA/Qvs/b95FpQFs/lx3iI0sWM9kJKtfBt
+UpHg/d3+pZ+04z2GB/lR87PzSuGgOmxYkWh77bBvtDJKpH8APwtOnJxZXGMjqQQ=
+=52jh
 -----END PGP SIGNATURE-----
