@@ -1,0 +1,34 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-4.8.2.ebuild,v 1.1 2012/08/13 15:00:04 flameeyes Exp $
+
+EAPI=4
+
+USE_RUBY="ruby18 ree18 ruby19 jruby"
+
+RUBY_FAKEGEM_NAME=ZenTest
+
+RUBY_FAKEGEM_TASK_DOC="docs"
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="README.txt History.txt example.txt example1.rb example2.rb example_dot_autotest.rb"
+
+inherit ruby-fakegem
+
+DESCRIPTION="ZenTest provides tools to support testing: zentest, unit_diff, autotest, multiruby, and Test::Rails"
+HOMEPAGE="http://rubyforge.org/projects/zentest/"
+LICENSE="Ruby"
+
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+SLOT="0"
+IUSE=""
+
+ruby_add_bdepend "
+	doc? (
+		>=dev-ruby/hoe-2.10
+		dev-ruby/hoe-seattlerb
+	)
+	test? (
+		>=dev-ruby/hoe-2.10
+		dev-ruby/hoe-seattlerb
+		virtual/ruby-minitest
+	)"
