@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/zentest
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.108 2012/07/26 11:14:31 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.109 2012/08/13 15:00:04 flameeyes Exp $
+
+*zentest-4.8.2 (13 Aug 2012)
+
+  13 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> +zentest-4.8.2.ebuild:
+  Version bump; update to EAPI 4.
 
   26 Jul 2012; Anthony G. Basile <blueness@gentoo.org> zentest-4.7.0.ebuild:
   Stable ppc64, bug #421525
@@ -435,4 +440,3 @@
   12 Jan 2006; Caleb Tennis <caleb@gentoo.org> +files/zentest-dirfix.diff,
   +files/zentest-fixrubyloc.diff, +metadata.xml, +zentest-2.4.0.ebuild:
   Inital import
-
